--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </div>
 
     <div class="bloco-inferior">
-      <p>Surpreenda quem você ama com um momento especial!</p>
+      <p>Esse é um pequeno presente para a minha princesa, eu te amo meu amor, feliz dia dos namorados! <br>
+        <strong>OBS: A traca do presente só será desbloqueada as 14h22 do sábado</strong></p>
     </div>
 
     <a id="lockedButton" class="botao-link trancado" href="javascript:void(0)">🔒 Trancado</a>
@@ -64,10 +65,10 @@
 
         botao.addEventListener('click', () => {
           const senha = prompt("Digite a senha para continuar:");
-          if (senha === "12/12") {
-            window.location.href = "https://example.com"; // <-- Substitua com seu link
+          if (senha === "1212") {
+            window.location.href = "https://giftcard.todo.gift/0ffqDgoBNosJzNkJ24glF3U8NA0PlEUGT2et" ; 
           } else {
-            alert("Senha incorreta! Dica: o dia e mês que nos representa.");
+            alert("Senha incorreta! Dica: Você sabe a senha.");
           }
         });
       }
