--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
   <div class="container">
     <h1 class="titulo">Dia dos Namorados</h1>
 
-    <div class="video-container">
-      <iframe 
-        src="" 
-        frameborder="0" 
-        allowfullscreen>
-      </iframe>
+    <div class="bloco-inferior">
+      <p>Esse é um presente especial, pensado com muito carinho. Espero que tenha gostado do buquê de girassóis</p>
     </div>
 
-    <div class="bloco-inferior">
-      <p>Esse é um pequeno presente para a minha princesa, eu te amo meu amor, feliz dia dos namorados! <br>
-        <strong>OBS: A traca do presente só será desbloqueada as 14h22 do sábado</strong></p>
-    </div>
+      <div class="video-container">
+        <iframe 
+          src="" 
+          frameborder="0" 
+          allowfullscreen>
+        </iframe>
+      </div>
+
+      <div class="bloco-inferior">
+        <p>Eu te amo minha amora, feliz dia dos namorados e feliz 1 ano e 6 meses! <br>
+          <strong>OBS: A tranca do presente só será desbloqueada às 14h22 do sábado</strong></p>
+      </div>
 
     <a id="lockedButton" class="botao-link trancado" href="javascript:void(0)">🔒 Trancado</a>
   </div>
